微信服务端编码完成

--- a/e/pom.xml
+++ b/e/pom.xml
@@ -111,9 +111,9 @@
 
         <!-- JWT 生成token -->
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.0</version>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.3</version>
         </dependency>
 
         <dependency>
